@@ -1,7 +1,7 @@
 #!/bin/sh
-# $Id: html2latex,v 1.39 2007/07/25 04:32:36 deraugla Exp $
+# $Id: html2latex,v 1.40 2007/07/26 08:34:12 deraugla Exp $
 
-FILES="index.html ptools.html syntext.html revsynt.html quot.html parsers.html fparsers.html lexers.html grammars.html pretty.html opretty.html ml_ast.html pragma.html extfun.html"
+FILES="index.html ptools.html syntext.html revsynt.html quot.html parsers.html fparsers.html lexers.html grammars.html pretty.html opretty.html ml_ast.html locations.html pragma.html extfun.html"
 
 /bin/echo '\documentclass[twoside]{report}
 \usepackage{fullpage}
