@@ -1,0 +1,30 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" 
+ "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <!-- $Id: locations.html,v 1.1 2007/07/26 08:34:12 deraugla Exp $ -->
+  <!-- Copyright (c) 2007 INRIA -->
+  <title>Locations</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Style-Type" content="text/css" />
+  <link rel="stylesheet" type="text/css" href="styles/base.css"
+        title="Normal" />
+</head>
+<body>
+
+<div id="menu">
+</div>
+
+<div id="content">
+
+<h1 class="top">Locations</h1>
+
+<p>...work in progress...</p>
+
+<div class="trailer">
+</div>
+
+</div>
+
+</body>
+</html>
