@@ -1,6 +1,6 @@
 <div id="menu">
   <h1>- Camlp5 -</h1>
-  <p>...work in progress... *<br/>...25th of July 2007...</p>
+  <p>...work in progress... *<br/>...26th of July 2007...</p>
   <ul>
     <li><a href="index.html">Overview</a></li>
     <li><a href="ptools.html">Parsing and printing tools</a></li>
@@ -8,7 +8,7 @@
   <ul>
     <li><a href="syntext.html">Syntax extensions</a></li>
     <li><a href="revsynt.html">The revised syntax</a></li>
-    <li><a href="quot.html">Quotations</a> *</li>
+    <li><a href="quot.html">Quotations</a></li>
   </ul>
   <ul>
     <li>Parsing tools
@@ -32,6 +32,7 @@
     <li>Other
       <ul>
         <li><a href="ml_ast.html">Syntax tree</a></li>
+        <li><a href="locations.html">Locations</a> *</li>
         <li><a href="pragma.html">Pragma directive</a></li>
         <li><a href="extfun.html">Extensible functions</a></li>
       </ul>
